[project]
name = "artcrm-outreach-agent"
version = "0.1.0"
requires-python = ">=3.11"
description = "LangGraph agent that drafts first-contact emails and queues them for human approval."
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["artcrm_outreach_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
